Layout Add Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodrecipeapp">
         <activity
+            android:name=".ui.add.AddActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.intro.IntroActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name="com.allana.food_recipe_app.ui.home.HomeActivity"
+            android:name=".ui.home.HomeActivity"
             android:exported="true" />
         <activity
             android:name=".ui.splashscreen.SplashScreen"
