--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.allana.food_recipe_app">
 
     <application
@@ -10,18 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodrecipeapp">
-        <activity
-            android:name=".ui.add.AddActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.intro.IntroActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.home.HomeActivity"
-            android:exported="true" />
         <activity
             android:name=".ui.splashscreen.SplashScreen"
             android:exported="true"
@@ -43,10 +30,15 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Home" />
         <activity
-            android:name=".ui.update.EditDeleteActivity"
+            android:name=".ui.editdelete.EditDeleteRecipeActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Home" />
+        <activity
+            android:name=".ui.add.AddRecipeActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Home"/>
     </application>
 
 </manifest>
