refactoring code for recipe dao and implement add recipe in AddRecipeActivity, fixed some bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,12 +38,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Home.ActionBar" />
         <activity
-            android:name="com.allana.food_recipe_app.ui.home.form.EditDeleteRecipeActivity"
+            android:name="com.allana.food_recipe_app.ui.home.form.editdelete.EditDeleteRecipeActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Home.ActionBar" />
         <activity
-            android:name="com.allana.food_recipe_app.ui.home.form.AddRecipeActivity"
+            android:name="com.allana.food_recipe_app.ui.home.form.add.AddRecipeActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Home.ActionBar" />
